--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Revo Test</title>
 </head>
 <body>
-    <h2>revo testing something</h2>
+    <h2>Revo testing something</h2>
 </body>
 </html>
