--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simple Page</title>
 </head>
 <body>
-    <h1>Welcome to my page</h1>
+    <h1>Welcome to Revo and Fatty's page</h1>
     <p>This is a simple HTML page with some text content.edittttttt </p>
 </body>
 </html>
